--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@ title: Zuurix.com - About
 
 <p>Hello!</p>
 	
-<p>I am Ivar, also known as an independent game developer Zuurix.</p>
-<p>Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
+<p>I am Ivar, also known as an independent game developer Zuurix.
+Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.</p>
 <p>I used MS Paint to make interfaces for the games I pretended to be making.</p>
