--- a/about/index.html
+++ b/about/index.html
@@ -9,26 +9,24 @@ title: Zuurix.com - About
 <p>Hello!</p>
 	
 <p>I am Ivar, also known as an independent game developer Zuurix.
-
 Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
 
-<p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.</p>
-<p>I used MS Paint to make interfaces for the games I pretended to be making.</p>
+<p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
+I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
-<p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.</p>
-<p>The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.</p>
+<p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
+The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.</p>
 
-<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
-
-<p>In May 2016 I have released my first game on Steam.</p>
+<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.
+In May 2016 I have released my first game on Steam.</p>
 
 <p>I am planning to release more games in 2018, 2019, and 2020.</p>
 
-<p>I have some programming and design experience, I can create a full game with GameMaker: Studio.</p>
-<p>The only things that I truly can't do are sounds and music.</p>
+<p>I have some programming and design experience, I can create a full game with GameMaker: Studio.
+The only things that I truly can't do are sounds and music.</p>
 
-<p>When I don't make games, I play games.</p>
-<p>I'm also sci-fi/fantasy book and movie enthusiast.</p>
+<p>When I don't make games, I play games.
+I'm also sci-fi/fantasy book and movie enthusiast.</p>
 
 <p>End of description.</p>
 	
