--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ Making games is everything to me and my ultimate goal is to become one of the be
 I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-The fall of RuneScape has left a huge void in my life and because I was unable to find a replacement for that game, I decided to start making my own games.</p>
+Because I was unable to find a replacement for that game, I decided to start making my own games.</p>
 
 <p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.
 In May 2016 I have released my first game on Steam.</p>
@@ -25,8 +25,8 @@ In May 2016 I have released my first game on Steam.</p>
 <p>I have some programming and design experience, I can create a full game with GameMaker: Studio.
 The only things that I truly can't do are sounds and music.</p>
 
-<p>When I don't make games, I play games.
-I'm also sci-fi/fantasy book and movie enthusiast.</p>
+<p>When I don't make games, I play games, watch TV stuff or YouTube, sometimes read books.
+I'm huge fan of everything sci-fi/fantasy.</p>
 
 <p>End of description.</p>
 	
