--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,9 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p><i>Sector Six has entered the final development stage! Not going to update the message until Sector Six is out of Early Access.</i></p>
+<p><i>Sector Six leaves Early Access in September 7th!</i></p>
+
+<li><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now to help find and fix the final issues >></a></li>
 
 <comments>
 <a>Links</a>
