--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Community
 
 <p><i>Sector Six leaves Early Access in September 7th!</i></p>
 
-<p><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now to help find and fix the final issues >></a></p>
+<p><i><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now to help find and fix the final issues >><i/></a></p>
 
 <comments>
 <a>Links</a>
