Updated press kit

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
 	<li><b>Website:</b> http://zuurix.com//</li>
-	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
+	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
@@ -46,10 +46,8 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 
-	<li>In development</li>
-	<li>Beta</li>
-	<li>Early Access</li>
-	<li><b>Estimated release date: </b>2018</li>
+	<li>Completed</li>
+	<li><b>Release date: </b>2018-09-07</li>
 
 	</ul>
 	
@@ -60,7 +58,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> zuurixgames@gmail.com</li>
+	<li><b>Email:</b> zuurix@protonmail.com</li>
 
 	</ul>
 	
@@ -68,53 +66,69 @@ title: Zuurix.com - Sector Six press kit
 	<a>Game description</a>
 	</comments>
 	
-	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>
+	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
 	
 	<p><b>Save the Universe</b></p>
 
-	<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. Unleash apocalyptic weapons, break laws of physics, resurrect ravaged dimensions - nothing is impossible in a war of this scale.</p>
+	<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. In your journey, you will interact with ancient structures and beings, break laws of physics, travel between Sectors, battle swarms of the Machine minions, collectors, despair, anomalies, defense systems - all to stop the terrible enemy.</p>
 
 	<p><b>Build your spaceship</b></p>
 
-	<p>Build your spaceship from procedural parts, obtained by destroying minions of the Machines and completing missions. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance and appearance of your spaceship however you want.</p>
+	<p>Spaceship building allows you to build a unique ship from procedural parts, obtained by destroying minions of the Machines. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance, appearance, and size of your ship.</p>
 
 	<p><b>Become master of spaceship combat</b></p>
 
 	<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own. Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
 
-	<p><b>Spaceship part customization and part sets</b></p>
+	<p><b>Part customization, part sets, and relics</b></p>
 
-	<p>Combine, upgrade and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts to activate game-changing set effects and transform your destroyer of invaders into something even more powerful!</p>
+	<p>Combine, upgrade, and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts and relics to transform your destroyer of invaders into something even more powerful!</p>
 
 	<p><b>Modular difficulty system</b></p>
 
-	<p>Make the game as hard as you want it to be! Forget "Easy / Medium / Hard" - the modular difficulty system allows you to modify almost every element of the combat and even gives rewards for it.</p>
+	<p>Make the game as hard as you want it to be! Modular difficulty system allows you to modify almost every element of the combat and offers rewards for increasing the difficulty.</p>
 		
 	<comments>
 	<a>Trailer</a>
 	</comments>
 	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	
 	<comments>
 	<a>Screenshots</a>
 	</comments>
 	
 	<a href=
-	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true">
-		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/1.%20Using%20Era's%20End%20ability.png?raw=true" title="Using Era's End ability" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true">
-		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/2.%20Fighting%20scythe.png?raw=true" title="Fighting scythe" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true">
-		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/7.%20Spaceship%20inventory%20and%20building%20field.png?raw=true" title="Inventory" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png?raw=true">
-		<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/official-screenshots/3.%20Fully%20upgraded%20rare%20item.png?raw=true" title="Rare item" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station" style="height: 320px; width: 480px;"/></a>
+	
+	<a href=
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor" style="height: 320px; width: 480px;"/></a>
+	
+	<a href=
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission" style="height: 320px; width: 480px;"/></a>
+	
+	<a href=
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm" style="height: 320px; width: 480px;"/></a>
+	
+	<a href=
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
 	
 	<comments>
 	<a>Images</a>
@@ -147,17 +161,5 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
 
         <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
-	
-	<comments>
-	<a>GIFs</a>
-	</comments>
-	
-	<a href="http://imgur.com/2shqyBq"><img src="http://i.imgur.com/2shqyBq.gif" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/wg2otXb"><img src="http://i.imgur.com/wg2otXb.gif" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/SiqaHV3"><img src="http://i.imgur.com/SiqaHV3.gif" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/PwxV1fm"><img src="http://i.imgur.com/PwxV1fm.gif" title="source: imgur.com" /></a>
 	
 </div><!-- /.blurb -->
