--- a/community/index.html
+++ b/community/index.html
@@ -10,9 +10,9 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p><i>Sector Six leaves Early Access in September 7th!</i></p>
+<p><i>Sector Six is released!</i></p>
 
-<p><i><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now to help find and fix the final issues >><i/></a></p>
+<p><i><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now >><i/></a></p>
 
 <comments>
 <a>Links</a>
