--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ title: Zuurix.com - Home
 <ul class="posts">
 	
 	{% for post in site.posts %}
-	<li> <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	<p2>{{ post.date | date_to_long_string }}</p2>
+	<p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>{{ post.date | date_to_long_string }}</p>
 	{% endfor %}
 	
 </ul>
