--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ title: Zuurix.com - Home
 	<a>Blog</a>
 	</comments>
 
-/*<ul class="posts">*/
+<!--<ul class="posts">*/-->
 	
 	{% for post in site.posts %}
 	<p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p> <p>{{ post.date | date_to_long_string }}</p>
 	{% endfor %}
 	
-/*</ul>*/
+<!--/*</ul>*/-->
 </div>
