--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@ title: Zuurix.com - Home
 </comments>
 	
 {% for post in site.posts %}
+
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
 <p2>{{ post.date | date_to_long_string }}</p2>
-<p2>*</p2>
+	
+<space>
+<a>***************</a>
+</space>
+
 {% endfor %}
 	
 </div>
