--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@ title: Zuurix.com - Home
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
 <p2>{{ post.date | date_to_long_string }}</p2>
 	
-<space>
-<a>***************</a>
-</space>
+<mini-space>
+<a>***</a>
+</mini-space>
 
 {% endfor %}
+	
+<mini-space>
+<a>***</a>
+</mini-space>
 	
 </div>
