--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@ title: Zuurix.com - Home
 {% for post in site.posts %}
 
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
-<p2>-{{ post.date | date_to_long_string }}</p2>
+<p2>{{ post.date | date_to_long_string }}</p2>
 	
 <micro-space>
 <a> </a>
 </micro-space>
 
 {% endfor %}
+	
+<micro-space>
+<a> </a>
+</micro-space>
 	
 </div>
