--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Home
 {% for post in site.posts %}
 
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
-<p2>{{ post.date | date_to_long_string }}</p2>
+<p-special>{{ post.date | date_to_long_string }}</p-special>
 	
 <micro-space>
 <a> </a>
