--- a/about/index.html
+++ b/about/index.html
@@ -22,12 +22,10 @@ In May 2016 I have released my first game on Steam.</p>
 
 <p>I am planning to release more games in 2018, 2019, and 2020.</p>
 
-<p>I have some programming and design experience, I can create a full game with GameMaker: Studio.
-The only things that I truly can't do are sounds and music.</p>
+<p>I can code and make decent graphics.
+I consider myself pretty good at designing functional, balanced games with higher than average complexity.</p>
 
 <p>When I don't make games, I play games, watch TV stuff or YouTube, sometimes read books.
 I'm huge fan of everything sci-fi/fantasy.</p>
 
-<p>End of description.</p>
-	
 </div><!-- /.blurb -->
