--- a/about/index.html
+++ b/about/index.html
@@ -17,15 +17,17 @@ I used MS Paint to make interfaces for the games I pretended to be making.</p>
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
 Because I was unable to find a replacement for that game, I decided to start making my own games.</p>
 
-<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.
-In May 2016 I have released my first game on Steam.</p>
+<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
 
-<p>I am planning to release more games in 2018, 2019, and 2020.</p>
+<p>In May 2016 I have released my first game on Steam Early Access.
+In September 2018 it has left Early Access and currently, it's my biggest game.</p>
+
+<p>I am planning to release more games in 2019 and 2020.</p>
 
 <p>I can code and make decent graphics.
-I consider myself pretty good at designing functional, balanced games with higher than average complexity.</p>
+I consider myself pretty good at designing functional, balanced games.</p>
 
 <p>When I don't make games, I play games, watch TV stuff or YouTube, sometimes read books.
-I'm huge fan of everything sci-fi/fantasy.</p>
+I'm a huge fan of everything sci-fi/fantasy.</p>
 
 </div><!-- /.blurb -->
