--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Zuurix.com - Home
 	
 {% for post in site.posts %}
 
-<p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}*</p><p2>{{ post.date | date_to_long_string }}</p2></a>
+<p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }} {{ post.date | date_to_long_string }}</p></a>
 	
 <micro-space>
 <a> </a>
