--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Home
 </comments>
 	
 {% for post in site.posts %}
-<p>{{ post.date | date_to_string }}<a href="{{ post.url }}" title="{{ post.title }}"> {{ post.title }}</a></p>
+<p2>{{ post.date | date_to_string }} </p2><p><a href="{{ post.url }}" title="{{ post.title }}"> {{ post.title }}</a></p>
 {% endfor %}
 	
 <micro-space>
