--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ title: Zuurix.com - Home
 </style>
 
 <div class="grid-container">
-  <div class="item1"><a href="{{ post.url }}" title="{{ post.title }}"> {{ post.title }}</div>
-  <div class="item2"><i><p-date>{{ post.date | date_long_to_string }}<p-date></i></div>
+<div class="item1"><p><a href="{{ post.url }}" title="{{ post.title }}"> {{ post.title }}</p></div>
+ <div class="item2"><i><p-date>{{ post.date | date_long_to_string }}</p-date></i></div>
 </div>
 	  
 {% endfor %}
