--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Zuurix.com - Home
 }
 .grid-container>div {
   background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
+  text-align: left;
   padding:20px 0;
   font-size: 30px;
 }
