--- a/index.html
+++ b/index.html
@@ -14,25 +14,7 @@ title: Zuurix.com - Home
 </comments>
 	
 {% for post in site.posts %}
-	
-<style>
-.grid-container {
-  display: grid;
-  grid: 150px / auto auto auto;
-  grid-gap: 10px;
-}
-.grid-container>div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: left;
-  padding: 20px 0;
-}
-</style>
-
-<div class="grid-container">
-<div class="item1"><p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</p></div>
-<div class="item2"><i><p-date>{{ post.date | date_to_long_string }}</p-date></i></div>
-</div>
-	  
+<p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}<small>{{ post.date | date_to_string }}</p>
 {% endfor %}
 	
 <micro-space>
