--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@ title: Zuurix.com - Home
 <a>Blog</a>
 </comments>
 	
-{% for post in site.posts %}
+<!--{% for post in site.posts %}
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><i><small> – {{ post.date | date_to_long_string }}</i></small></p>
+{% endfor %}-->
+	
+{% for post in site.posts  %}
+
+{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+ 
+{% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+
+{% if forloop.first %}
+<h2 id="{{ this_year }}-ref">{{this_year}}</h2>
+<ul>
+{% endif %}
+
+<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+
+{% if forloop.last %}
+</ul>
+{% else %}
+{% if this_year != next_year %}
+</ul>
+<h2 id="{{ next_year }}-ref">{{next_year}}</h2>
+<ul>
+{% endif %}
+{% endif %}
 {% endfor %}
 	
 <micro-space>
