--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ title: Zuurix.com - Home
 {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 
 {% if forloop.first %}
-<h2 id="{{ this_year }}-ref">{{this_year}}</h2>
+
+<!--<h2 id="{{ this_year }}-ref">{{this_year}}</h2>-->
 
 {% endif %}
 
@@ -35,7 +36,7 @@ title: Zuurix.com - Home
 {% else %}
 {% if this_year != next_year %}
 
-<h2 id="{{ next_year }}-ref">{{next_year}}</h2>
+<!--<h2 id="{{ next_year }}-ref">{{next_year}}</h2>-->
 
 {% endif %}
 {% endif %}
