--- a/index.html
+++ b/index.html
@@ -16,30 +16,9 @@ title: Zuurix.com - Home
 <!--{% for post in site.posts %}
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><i><small> – {{ post.date | date_to_long_string }}</i></small></p>
 {% endfor %}-->
-	
-{% for post in site.posts  %}
 
-{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
- 
-{% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
-
-{% if forloop.first %}
-
-<!--<h2 id="{{ this_year }}-ref">{{this_year}}</h2>-->
-
-{% endif %}
-
+{% for post in site.posts offset:0 limit:50 %}
 <p><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><i><small> – {{ post.date | date_to_long_string }}</i></small></p>
-
-{% if forloop.last %}
-
-{% else %}
-{% if this_year != next_year %}
-
-<!--<h2 id="{{ next_year }}-ref">{{next_year}}</h2>-->
-
-{% endif %}
-{% endif %}
 {% endfor %}
 	
 <micro-space>
