--- a/index.html
+++ b/index.html
@@ -25,4 +25,10 @@ title: Zuurix.com - Home
 <a> </a>
 </micro-space>
 	
+<comments>
+<a>Blog archive</a>
+</comments>
+	
+<p><a href="http://zuurix.com/blog-archive" title="Go to archive"></p>
+
 </div>
