--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ title: Zuurix.com - Home
 </micro-space>
 	
 <comments>
-<a>Blog archive</a>
+<a>Older posts</a>
 </comments>
 	
-<p><a href="http://zuurix.com/blog-archive" title="Go to archive"></p>
+<p><a href="http://zuurix.com/blog-archive" title="View older posts"></a></p>
 
 </div>
