--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 	
-<p><a href="http://zuurix.com/blog-archive" title="View older posts"></a></p>
+<p><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts</a></p>
 
 </div>
