--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ title: Zuurix.com - Home
 <comments>
 <a>Older posts</a>
 </comments>
-	
-<p><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts</a></p>
+		
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts</a></li>
+</ul>
 
 </div>
