--- a/games/index.html
+++ b/games/index.html
@@ -29,10 +29,10 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Visit archive containing my old games, side projects and games made for competitions.</p>	
+	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
-	<ul style="list-style-type:none; margin-bottom: 202px;">
-	<li><a href="http://zuurix.com/other-games/">Visit archive</a></li>
+	<ul style="list-style-type:none; margin-bottom: 0px;">
+	<li><a href="http://zuurix.com/other-games/">Go to archive</a></li>
 	</ul>
 	
 	<comments>
