--- a/games/index.html
+++ b/games/index.html
@@ -31,8 +31,8 @@ title: Zuurix.com - Games
 	
 	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
-	<ul style="list-style-type:none; margin-bottom: 0px;">
-	<li><a href="http://zuurix.com/other-games/">Go to archive</a></li>
+	<ul style="list-style-type:none;">
+	<li><a href="http://zuurix.com/other-games/">Go to archive >></a></li>
 	</ul>
 	
 	<comments>
