--- a/games/index.html
+++ b/games/index.html
@@ -16,10 +16,8 @@ title: Zuurix.com - Games
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 136px;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
-	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
-	<li><a href="https://trello.com/b/oBPlp9SV/sector-six-roadmap" target="_blank">Upcoming updates</a></li>
-	<li><a href="https://www.facebook.com/SectorSixGame" target="_blank">Facebook page</a></li>
+	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam >></a></li>
+	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit >></a></li>
 	<li></li>
 	</ul>
 		
@@ -31,7 +29,7 @@ title: Zuurix.com - Games
 	
 	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
-	<ul style="list-style-type:none;">
+	<ul style="list-style-type:none; margin-bottom: 202px;">
 	<li><a href="http://zuurix.com/other-games/">Go to archive >></a></li>
 	</ul>
 	
