--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts</a></li>
+<ul style="list-style-type:none; margin-bottom: 0px;">
+<li><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts >></a></li>
 </ul>
 
 </div>
