--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<ul style="list-style-type:none; margin-bottom: 0px;">
-<li><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts >></a></li>
-</ul>
+<p><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts >></a></p>
 
 </div>
