--- a/about/index.html
+++ b/about/index.html
@@ -30,4 +30,12 @@ I consider myself pretty good at designing functional, balanced games.</p>
 <p>When I don't make games, I play games, watch TV stuff or YouTube, sometimes read books.
 I'm a huge fan of everything sci-fi/fantasy.</p>
 
+<comments>
+<a>Contact information</a>
+</comments>
+	
+<a>Aivaras Klimas</a>
+<a>Email: zuurix@protonmail.com</a>
+<a>Discord: Zuurix#4134</a>
+
 </div><!-- /.blurb -->
