--- a/about/index.html
+++ b/about/index.html
@@ -34,8 +34,8 @@ I'm a huge fan of everything sci-fi/fantasy.</p>
 <a>Contact information</a>
 </comments>
 	
-<a>Aivaras Klimas</a>
-<a>Email: zuurix@protonmail.com</a>
-<a>Discord: Zuurix#4134</a>
+<p>Aivaras Klimas</p>
+<p>Email: zuurix@protonmail.com</p>
+<p>Discord: Zuurix#4134</p>
 
 </div><!-- /.blurb -->
