--- a/about/index.html
+++ b/about/index.html
@@ -8,19 +8,19 @@ title: Zuurix.com - About
 
 <p>Hello!</p>
 	
-<p>I am Ivar, also known as an independent game developer Zuurix.
+<p>I am Aivaras Klimas, also known as an independent game developer Zuurix.
 Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
 I used MS Paint to make interfaces for the games I pretended to be making.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-Because I was unable to find a replacement for that game, I decided to start making my own games.</p>
+Because I was unable to find a replacement for that game, I decided to stop pretending and start making my own games.</p>
 
 <p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
 
-<p>In May 2016 I have released my first game on Steam Early Access.
-In September 2018 it has left Early Access and currently, it's my biggest game.</p>
+<p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
+<p>In September 2018 it has left Early Access and currently, Sector Six is my biggest game.</p>
 
 <p>I am planning to release more games in 2019 and 2020.</p>
 
@@ -34,8 +34,7 @@ I'm a huge fan of everything sci-fi/fantasy.</p>
 <a>Contact information</a>
 </comments>
 	
-<p>Aivaras Klimas</p>
-<p>Email: zuurix@protonmail.com</p>
-<p>Discord: Zuurix#4134</p>
+<p>Email: <i>zuurix@protonmail.com</i></p>
+<p>Discord: <i>Zuurix#4134</i></p>
 
 </div><!-- /.blurb -->
