--- a/community/index.html
+++ b/community/index.html
@@ -17,13 +17,13 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
-<ul style="list-style-type:disc">
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
-<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
-<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
-<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
-<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
-<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
+<ul style="list-style-type:none">
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook >></a></li>
+<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube >></a></li>
+<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter >></a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki >></a></li>
+<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch >></a></li>
 </ul>
 
 <comments>
