--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@ I consider myself pretty good at designing functional, balanced games.</p>
 I'm a huge fan of everything sci-fi/fantasy.</p>
 
 <comments>
-<a>Contact information</a>
+<a>Contact me</a>
 </comments>
 	
 <p>Email: <i>zuurix@protonmail.com</i></p>
