--- a/community/index.html
+++ b/community/index.html
@@ -11,18 +11,22 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>Sector Six is released!</i></p>
-<p><i><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">Play now >></i></a></p>
+<ul style="list-style-type:disc">
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now! >></a></li>
+</ul>
 
 <comments>
 <a>Links</a>
 </comments>
 
-<a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a>
-<a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook >></a>
-<a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube >></a>
-<a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter >></a>
-<a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki >></a>
-<a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch >></a>
+<ul style="list-style-type:disc">
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook >></a></li>
+<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube >></a></li>
+<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter >></a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki >></a></li>
+<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch >></a></li>
+</ul>
 
 <comments>
 <a>Comments</a>
