--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<p><a href="http://zuurix.com/blog-archive" title="View older posts">View older posts >></a></p>
+<ul style="list-style-type:disc">
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> View older posts >></a></li>
+</ul>
 
 </div>
