--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Community
 
 <p><i>Sector Six is released!</i></p>
 <ul style="list-style-type:disc">
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now! >></a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now!</a></li>
 </ul>
 
 <comments>
@@ -20,12 +20,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:disc">
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a></li>
-<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook >></a></li>
-<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube >></a></li>
-<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter >></a></li>
-<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki >></a></li>
-<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch >></a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
+<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
+<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
+<li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
 </ul>
 
 <comments>
