--- a/games/index.html
+++ b/games/index.html
@@ -15,9 +15,9 @@ title: Zuurix.com - Games
     	
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
-	<ul style="list-style-type:none; margin-bottom: 180px;">
+	<ul style="margin-bottom: 180px;">
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam >></a></li>
-	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit >></a></li>
+	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	<li></li>
 	</ul>
 		
@@ -29,8 +29,8 @@ title: Zuurix.com - Games
 	
 	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
-	<ul style="list-style-type:none; margin-bottom: 202px;">
-	<li><a href="http://zuurix.com/other-games/">Go to archive >></a></li>
+	<ul style="margin-bottom: 202px;">
+	<li><a href="http://zuurix.com/other-games/">Go to archive</a></li>
 	</ul>
 	
 	<comments>
