--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>Sector Six is released!</i></p>
-<ul list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');>
+<ul>
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now!</a></li>
 </ul>
 
@@ -19,8 +19,8 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
-<ul list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a></li>
+<ul>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam *</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
 <li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
