--- a/games/index.html
+++ b/games/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Games
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
 	<ul style="margin-bottom: 180px;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam >></a></li>
+	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	<li></li>
 	</ul>
