--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<ul style="list-style-type:disc">
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> View older posts >></a></li>
+<ul>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">View older posts</a></li>
 </ul>
 
 </div>
