--- a/community/index.html
+++ b/community/index.html
@@ -19,6 +19,7 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
+<link>
 <ul>
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
@@ -27,6 +28,7 @@ title: Zuurix.com - Community
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
 <li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
 </ul>
+</link>
 
 <comments>
 <a>Comments</a>
