--- a/community/index.html
+++ b/community/index.html
@@ -21,7 +21,7 @@ title: Zuurix.com - Community
 
 <link>
 <ul>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam >></a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam*</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
 <li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
