--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>Sector Six is released!</i></p>
-<ul>
+<ul style = "list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');">
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now!</a></li>
 </ul>
 
