--- a/community/index.html
+++ b/community/index.html
@@ -19,16 +19,14 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
-<link-list>
-<ul>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam**</a></li>
+<ul style = "list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');">
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a></li>
 <li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a></li>
 <li><a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a></li>
 </ul>
-</link-list>
 
 <comments>
 <a>Comments</a>
