--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<ul>
+<ul style = "list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');">
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">View older posts</a></li>
 </ul>
 
