--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Zuurix.com - Home
 </comments>
 		
 <ul style = "list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');">
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">View older posts</a></li>
+<li><a href="http://zuurix.com/blog-archive" target="_blank">View older posts</a></li>
 </ul>
 
 </div>
