--- a/games/index.html
+++ b/games/index.html
@@ -15,7 +15,7 @@ title: Zuurix.com - Games
     	
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
-	<ul style="margin-bottom: 180px; list-style-none;">
+	<ul style="margin-bottom: 180px; list-style-type: none;">
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	</ul>
@@ -28,7 +28,7 @@ title: Zuurix.com - Games
 	
 	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
-	<ul style="margin-bottom: 180px; list-style-none;">
+	<ul style="margin-bottom: 180px; list-style-type: none;">
 	<li><a href="http://zuurix.com/other-games/">Go to archive</a></li>
 	</ul>
 	
