--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<ul>
-<li><a href="http://zuurix.com/blog-archive">View older posts</a></li>
-</ul>
+<a href="http://zuurix.com/blog-archive">View older posts</a></li>
 
 </div>
