--- a/community/index.html
+++ b/community/index.html
@@ -11,18 +11,18 @@ title: Zuurix.com - Community
 </comments>
 
 <p><i>Sector Six is released!</i></p>
-<a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now!</a>
+<p href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank"> Play now!</p>
 
 <comments>
 <a>Links</a>
 </comments>
 
-<a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</a>
-<a href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</a>
-<a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</a>
-<a href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</a>
-<a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</a>
-<a href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</a>
+<p href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">                   Steam</p>
+<p href="https://www.facebook.com/GamesByZuurix/" target="_blank">                          Facebook</p>
+<p href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">  YouTube</p>
+<p href="https://twitter.com/DeveloperZuurix" target="_blank">                              Twitter</p>
+<p href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">       Wiki</p>
+<p href="https://www.twitch.tv/zuurix0" target="_blank">                                    Twitch</p>
 
 <comments>
 <a>Comments</a>
