--- a/community/index.html
+++ b/community/index.html
@@ -10,19 +10,19 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p><i>Sector Six is released!</i></p>
-<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Play now!</a></p>
+<p>Sector Six is released!</p>
+<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Play now!</a></p>
 
 <comments>
 <a>Links</a>
 </comments>
 
-<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Steam</a></p>
-<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">Facebook</a></p>
-<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">YouTube</a></p>
-<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">Twitter</a></p>
-<p><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Wiki</a></p>
-<p><a href="https://www.twitch.tv/zuurix0" target="_blank">Twitch</a></p>
+<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Steam</a></p>
+<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Facebook</a></p>
+<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ YouTube</a></p>
+<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
+<p><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">▶ Wiki</a></p>
+<p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ Twitch</a></p>
 
 <comments>
 <a>Comments</a>
