--- a/other-games/index.html
+++ b/other-games/index.html
@@ -17,7 +17,7 @@ title: Zuurix.com - Other games
 <p>My first real CCG. A prototype for Legion of Eternity.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/the-cursed-legion" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/the-cursed-legion" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
@@ -29,7 +29,7 @@ title: Zuurix.com - Other games
 <p>Beyond the Gate is an experimental RPG that features millions of randomly generated worlds.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/beyond-the-gate" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/beyond-the-gate" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
@@ -41,7 +41,7 @@ title: Zuurix.com - Other games
 <p>The Name of the Demon is a small RPG made for a 64Digits.com competition.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/the-name-of-the-demon" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/the-name-of-the-demon" target="_blank">▶ Download</a></li>
 </ul>
 
 <comments>
@@ -53,7 +53,7 @@ title: Zuurix.com - Other games
 <p>Battle for '17 is a simple shooter platformer made in 3 days.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
@@ -65,7 +65,7 @@ title: Zuurix.com - Other games
 <p>Lur is RPG with a lot content. It is my third game.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/lur-rpg" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/lur-rpg" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
@@ -77,7 +77,7 @@ title: Zuurix.com - Other games
 <p>Sector Seven is experimental shoot 'em up with RPG elements. My second game and Sector Six prototype.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/sector-seven" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/sector-seven" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
@@ -89,7 +89,7 @@ title: Zuurix.com - Other games
 <p>My first game!</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
-<li><a href="https://zuurix.itch.io/zuuland" target="_blank">Download</a></li>
+<li><a href="https://zuurix.itch.io/zuuland" target="_blank">▶ Download</a></li>
 </ul>
 	
 <comments>
