--- a/about/index.html
+++ b/about/index.html
@@ -8,11 +8,10 @@ title: Zuurix.com - About
 
 <p>Hello!</p>
 	
-<p>I am Aivaras Klimas, also known as an independent game developer Zuurix.
-Making games is everything to me and my ultimate goal is to become one of the best indie game developers in the world.</p>
+<p>I am Aivaras Klimas, also known as an independent game developer Zuurix. Making games is everything to me.</a>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
-I used MS Paint to make interfaces for the games I pretended to be making.</p>
+I used to make interfaces for the games I pretended to be making with MS Paint.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
 Because I was unable to find a replacement for that game, I decided to stop pretending and start making my own games.</p>
@@ -24,10 +23,10 @@ Because I was unable to find a replacement for that game, I decided to stop pret
 
 <p>I am planning to release more games in 2019 and 2020.</p>
 
-<p>I can code and make decent graphics.
-I consider myself pretty good at designing functional, balanced games.</p>
+<p>My strengths are coding and design. I can make decent graphics as well.</p>
+<p>I would like to become better at writing and try making music at some point, just to see if I can do it.</a>
 
-<p>When I don't make games, I play games, watch TV stuff or YouTube, sometimes read books.
+<p>When I don't make games, I play games, watch TV shows or YouTube, sometimes read books.
 I'm a huge fan of everything sci-fi/fantasy.</p>
 
 <comments>
