--- a/about/index.html
+++ b/about/index.html
@@ -6,15 +6,13 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<p>Hello!</p>
-	
 <p>I am Aivaras Klimas, also known as an independent game developer Zuurix. Making games is everything to me.</a>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
-I used to make interfaces for the games I pretended to be making with MS Paint.</p>
+I used to create interface sprites and other assets with MS Paint for games I pretended to be making.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-Because I was unable to find a replacement for that game, I decided to stop pretending and start making my own games.</p>
+Because I was unable to find a replacement for that game, I decided to stop pretending and start making real games.</p>
 
 <p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
 
